# serializer version: 1
# name: test_device_registry
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'https://ecotrend.ista.de/',
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'ista_ecotrend',
        '26e93f1a-c828-11ea-87d0-0242ac130003',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'ista SE',
    'model': 'ista EcoTrend',
    'model_id': None,
    'name': 'Luxemburger Str. 1',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry.1
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': 'https://ecotrend.ista.de/',
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'ista_ecotrend',
        'eaf5c5c8-889f-4a3c-b68c-e9a676505762',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'ista SE',
    'model': 'ista EcoTrend',
    'model_id': None,
    'name': 'Bahnhofsstr. 1A',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
